--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,7 +99,7 @@ const metadata = {
   <!-- Features2 Widget ************** -->
 
   <Features2
-    title="Most used widgets"
+    title="Most used projects"
     subtitle="Provides frequently used components for building websites using Tailwind CSS"
     tagline="Projects"
     items={[
